--- a/main.html
+++ b/main.html
@@ -10,6 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<p>Would you like to join our quest?</p>
+<button class="joinBtn" id="btn">Confirm</button>
 
 </body>
 
