--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	
-<button class="joinBtn" id="btn">Submit</button>
+<button type="submit" id="btn">Submit</button>
 
 </body>
 
